# api-plantas

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/controller/: rotas.py
app/model/: database.py  modelos.py
app/services/: servicos.py
app/utils/: data_atual.py  parser.py
app/views/: validacoes.py
app/web/: index.html
