[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4",
    "motor>=3.6.0,<4.0.0",
    "beanie>=1.26.0,<2.0.0",
    "python-dotenv>=1.0.0",
    "certifi>=2024.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

exclude = [
    ".git",
    ".env",
    ".venv",
    "venv",
    "__init__",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",  
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"